# colorredstderr-mirror

./: .gitignore  NEWS  README  configure.ac
m4/: README
src/: Makefile.am  coloredstderr.c  compiler.h  constants.h  debug.h  hookmacros.h  ldpreload.h  macros.h  trackfds.h
tests/: Makefile.am  example-noforce.sh  example-redirects.sh.expected  example-simple.sh.expected  example.c  example.expected  example.h  example_environment.expected  example_environment_empty.expected  example_err.c  example_err.expected  example_error.c  example_error.expected  example_exec.c  example_exec.expected  example_noforce.sh  example_noforce.sh.expected  example_redirects.sh  example_redirects.sh.expected  example_simple.sh  example_simple.sh.expected  example_stdio.c  example_stdio.expected  example_vfork.c  example_vfork.expected  lib.sh  run.sh  test_environment.sh  test_err.sh  test_error.sh  test_example.sh  test_exec.sh  test_noforce.sh  test_redirects.sh  test_simple.sh  test_stdio.sh  test_symbols.sh  test_vfork.sh
