lib_LTLIBRARIES             = libcoloredstderr.la
libcoloredstderr_la_SOURCES = coloredstderr.c \
                              constants.h \
                              debug.h \
                              hookmacros.h \
                              ldpreload.h \
                              trackfds.h
