lib_LTLIBRARIES             = libcoloredstderr.la
libcoloredstderr_la_SOURCES = coloredstderr.c \
                              compiler.h \
                              constants.h \
                              debug.h \
                              hookmacros.h \
                              ldpreload.h \
                              trackfds.h
